--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Assets/css/main.css">
-    <script src="Components/header.js"></script>
-    <script src="Components/my-nav.js"></script>
-    <script src="Components/my-section.js"></script>
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="Assets/js/app.js" type="module" defer></script>
+    <link rel="stylesheet" href="Assets/css/style.css">
 </head>
 <body>
-    <header-component></header-component>
-    <div style="display: flex;">    
+
+    <my-header></my-header>
+    <div style="width: 100%;display: grid; grid-template-columns: 8fr 1fr;">
         <my-section></my-section>
         <my-nav></my-nav>
     </div>
+    <my-footer></my-footer>
+
 </body>
 </html>
